--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(ox)
 export(ox_alias_default_ns)
+export(ox_audit_log)
 export(ox_codelist)
 export(ox_codelist_item)
 export(ox_codelist_ref)
@@ -17,5 +18,6 @@ export(ox_item_data)
 export(ox_item_def)
 export(ox_item_ref)
 export(ox_measurement_units)
+export(ox_sites)
 export(ox_subject_data)
 export(ox_xtract_group)
