--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,4 +12,7 @@ LazyData: true
 Imports: dplyr,
     XML
 RoxygenNote: 6.0.1
-Suggests: testthat
+Suggests: testthat,
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
