--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,10 +6,11 @@ Author: Albert Cobos
 Maintainer: The package maintainer <acobos@ub.edu>
 Description: Reads Openclinica XML export files (odm 1.3 Clinical Extensions).
 URL: https://github.com/acobos/ox
-License: What license is it under?
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
 Imports: dplyr,
+    tidyr,
     XML,
     pbapply
 RoxygenNote: 6.0.1
