New ox_metadata() function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(ox_item_data)
 export(ox_item_def)
 export(ox_item_ref)
 export(ox_measurement_units)
+export(ox_metadata)
 export(ox_sites)
 export(ox_subject_data)
 export(ox_xtract_group)
