New fun to get file info.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(ox_codelist_item)
 export(ox_codelist_ref)
 export(ox_event_def)
 export(ox_event_ref)
+export(ox_file_info)
 export(ox_form_def)
 export(ox_form_ref)
 export(ox_global_vars)
