--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,8 @@ Imports:
     tidyr,
     XML,
     pbapply,
-    magrittr
+    magrittr,
+    snakecase
 RoxygenNote: 6.1.1
 Suggests: testthat,
     knitr,
