--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,5 +19,6 @@ Imports:
 RoxygenNote: 6.1.1
 Suggests: testthat,
     knitr,
-    rmarkdown
+    rmarkdown,
+    snakecase
 VignetteBuilder: knitr
