--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,6 +19,5 @@ Imports:
 RoxygenNote: 6.1.1
 Suggests: testthat,
     knitr,
-    rmarkdown,
-    snakecase
+    rmarkdown
 VignetteBuilder: knitr
