function ox_item_data() renamed to ox_data()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(ox_audit_log)
 export(ox_codelist)
 export(ox_codelist_item)
 export(ox_codelist_ref)
+export(ox_data)
 export(ox_event_def)
 export(ox_event_ref)
 export(ox_file_info)
@@ -16,7 +17,6 @@ export(ox_group_def)
 export(ox_group_ref)
 export(ox_group_repeat)
 export(ox_info)
-export(ox_item_data)
 export(ox_item_def)
 export(ox_item_ref)
 export(ox_measurement_units)
