Function ox_subject_data() renamed to ox_subjects()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,6 @@ export(ox_item_ref)
 export(ox_measurement_units)
 export(ox_metadata)
 export(ox_sites)
-export(ox_subject_data)
+export(ox_subjects)
 export(ox_xtract_group)
 importFrom(magrittr,"%>%")
