Rename function ox_measurement_units() to ox_units()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,9 +19,9 @@ export(ox_group_repeat)
 export(ox_info)
 export(ox_item_def)
 export(ox_item_ref)
-export(ox_measurement_units)
 export(ox_metadata)
 export(ox_sites)
 export(ox_subjects)
+export(ox_units)
 export(ox_xtract_group)
 importFrom(magrittr,"%>%")
