--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,12 @@
 Package: ox
 Type: Package
-Title: Reads OpenClinica XML export files
+Title: Reads OpenClinica xml export files
 Version: 0.0.0.9002
 Author: Albert Cobos
 Maintainer: The package maintainer <acobos@ub.edu>
-Description: Reads Openclinica XML export files (odm 1.3 Clinical Extensions).
+Description: Reads OpenClinica odm 1.3 xml export files and creates dataframes
+    for data and metadata, or a list containing both. Tidy dataframes can be 
+    created for item-groups, with optional definition of factors from codelists.  
 URL: https://github.com/acobos/ox
 License: GPL-3
 Encoding: UTF-8
