--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,12 +2,13 @@ Package: ox
 Type: Package
 Title: Reads OpenClinica xml export files
 Version: 0.0.0.9002
-Author: Albert Cobos
-Maintainer: The package maintainer <acobos@ub.edu>
+Authors@R: person("Albert", "Cobos", email="acobos@ub.edu", 
+    role=c("aut", "cre"))
 Description: Reads OpenClinica odm 1.3 xml export files and creates dataframes
     for data and metadata, or a list containing both. Tidy dataframes can be 
     created for item-groups, with optional definition of factors from codelists.  
 URL: https://github.com/acobos/ox
+BugReports: https://github.com/acobos/ox/issues
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
